# StateMinimization

./: CMakeLists.txt  README.md  gitignore.txt  qwq.txt
doc/: BLIF.pdf:Zone.Identifier  FSM.pdf:Zone.Identifier  Project03.pdf:Zone.Identifier  dotguide.pdf:Zone.Identifier
example/myTest/kiss/case1/: input.dot  out.dot  out.kiss
example/myTest/kiss/case2/: input.dot  out.dot
example/myTest/kiss/case3/: input.dot  out.dot  out.kiss
example/myTest/kiss/case4/: input.dot  out.dot  out.kiss
example/myTest/kiss/case5/: input.dot  out.dot
example/myTest/mine/: input.dot  input.kiss  out.dot  out.kiss
example/myTest/testcase/test1/: input.dot  out.dot
example/myTest/testcase/test2/: input.dot  out.dot  out.kiss
example/myTest/testcase/test3/: input.dot  out.dot  out.kiss
include/: Kiss.h  StateMinimization.h  Table.h
src/: B11130225.cc  Kiss.hpp  KissHandler.cc  KissHandler.hpp  Minimization.cc  Minimization.hpp  StateMinimization.cc  StateMinimization.h  StateMinimization.hpp  Table.hpp
